// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`helperValidators emptyStringToUndefinedValidation accept empty string 1`] = `
{
  "data": undefined,
  "success": true,
}
`;

exports[`helperValidators emptyStringToUndefinedValidation accept undefined 1`] = `
{
  "data": undefined,
  "success": true,
}
`;

exports[`helperValidators emptyStringToUndefinedValidation decline filled string 1`] = `
{
  "error": [ZodError: [
  {
    "code": "custom",
    "message": "Invalid input",
    "path": []
  }
]],
  "success": false,
}
`;

exports[`helperValidators emptyStringToUndefinedValidation decline number 1`] = `
{
  "error": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "number",
    "path": [],
    "message": "Expected string, received number"
  }
]],
  "success": false,
}
`;

exports[`helperValidators getSingleFileValidation .docm 1`] = `
{
  "error": [ZodError: [
  {
    "code": "custom",
    "params": {
      "i18n": "errors.file_extension_invalid_type"
    },
    "path": [],
    "message": "Invalid input"
  }
]],
  "success": false,
}
`;

exports[`helperValidators getSingleFileValidation .tar.gz 1`] = `
{
  "error": [ZodError: [
  {
    "code": "custom",
    "params": {
      "i18n": "errors.file_extension_invalid_type"
    },
    "path": [],
    "message": "Invalid input"
  }
]],
  "success": false,
}
`;

exports[`helperValidators getSingleFileValidation .webm 1`] = `
{
  "error": [ZodError: [
  {
    "code": "custom",
    "params": {
      "i18n": "errors.file_extension_invalid_type"
    },
    "path": [],
    "message": "Invalid input"
  }
]],
  "success": false,
}
`;

exports[`helperValidators getSingleFileValidation Linux/UNIX hidden file 1`] = `
{
  "error": [ZodError: [
  {
    "code": "custom",
    "params": {
      "i18n": "errors.file_basename_too_small"
    },
    "path": [],
    "message": "Invalid input"
  },
  {
    "code": "custom",
    "params": {
      "i18n": "errors.file_extension_invalid_type"
    },
    "path": [],
    "message": "Invalid input"
  }
]],
  "success": false,
}
`;

exports[`helperValidators getSingleFileValidation crazy characters file 1`] = `
{
  "error": [ZodError: [
  {
    "code": "custom",
    "params": {
      "i18n": "errors.file_name_invalid_characters"
    },
    "path": [],
    "message": "Invalid input"
  }
]],
  "success": false,
}
`;

exports[`helperValidators getSingleFileValidation no basename file 1`] = `
{
  "error": [ZodError: [
  {
    "code": "custom",
    "params": {
      "i18n": "errors.file_basename_too_small"
    },
    "path": [],
    "message": "Invalid input"
  },
  {
    "code": "custom",
    "params": {
      "i18n": "errors.file_extension_invalid_type"
    },
    "path": [],
    "message": "Invalid input"
  }
]],
  "success": false,
}
`;

exports[`helperValidators getSingleFileValidation no prefix file 1`] = `
{
  "error": [ZodError: [
  {
    "code": "custom",
    "params": {
      "i18n": "errors.file_basename_too_small"
    },
    "path": [],
    "message": "Invalid input"
  },
  {
    "code": "custom",
    "params": {
      "i18n": "errors.file_extension_invalid_type"
    },
    "path": [],
    "message": "Invalid input"
  }
]],
  "success": false,
}
`;

exports[`helperValidators getSingleFileValidation standard file 1`] = `
{
  "data": {
    "fileName": "awoo.png",
    "size": 120,
  },
  "success": true,
}
`;

exports[`helperValidators getSingleFileValidation very big sized file 1`] = `
{
  "error": [ZodError: [
  {
    "code": "custom",
    "params": {
      "i18n": "errors.file_size_too_large",
      "size": 100000
    },
    "path": [],
    "message": "Invalid input"
  }
]],
  "success": false,
}
`;

exports[`helperValidators getSingleFileValidation zero sized file 1`] = `
{
  "error": [ZodError: [
  {
    "code": "custom",
    "params": {
      "i18n": "errors.file_size_too_small"
    },
    "path": [],
    "message": "Invalid input"
  }
]],
  "success": false,
}
`;

exports[`helperValidators partnerIdValidation accept project participant id 1`] = `
{
  "data": "a0D2600000zXrAIEA0",
  "success": true,
}
`;

exports[`helperValidators partnerIdValidation decline account id 1`] = `
{
  "error": [ZodError: [
  {
    "code": "invalid_string",
    "validation": {
      "startsWith": "a0D"
    },
    "message": "Invalid input: must start with \\"a0D\\"",
    "path": []
  }
]],
  "success": false,
}
`;

exports[`helperValidators partnerIdValidation decline empty string 1`] = `
{
  "error": [ZodError: [
  {
    "code": "invalid_string",
    "validation": {
      "startsWith": "a0D"
    },
    "message": "Invalid input: must start with \\"a0D\\"",
    "path": []
  }
]],
  "success": false,
}
`;

exports[`helperValidators partnerIdValidation decline project id 1`] = `
{
  "error": [ZodError: [
  {
    "code": "invalid_string",
    "validation": {
      "startsWith": "a0D"
    },
    "message": "Invalid input: must start with \\"a0D\\"",
    "path": []
  }
]],
  "success": false,
}
`;

exports[`helperValidators periodIdValidation accept 1 1`] = `
{
  "data": 1,
  "success": true,
}
`;

exports[`helperValidators periodIdValidation accept 2 1`] = `
{
  "data": 2,
  "success": true,
}
`;

exports[`helperValidators periodIdValidation accept 3 1`] = `
{
  "data": 3,
  "success": true,
}
`;

exports[`helperValidators periodIdValidation accept 5 1`] = `
{
  "data": 5,
  "success": true,
}
`;

exports[`helperValidators periodIdValidation accept string int 1`] = `
{
  "data": 4,
  "success": true,
}
`;

exports[`helperValidators periodIdValidation decline 0 1`] = `
{
  "error": [ZodError: [
  {
    "code": "too_small",
    "minimum": 0,
    "type": "number",
    "inclusive": false,
    "exact": false,
    "message": "Number must be greater than 0",
    "path": []
  }
]],
  "success": false,
}
`;

exports[`helperValidators periodIdValidation decline absurd number 1`] = `
{
  "error": [ZodError: [
  {
    "code": "too_big",
    "maximum": 500,
    "type": "number",
    "inclusive": false,
    "exact": false,
    "message": "Number must be less than 500",
    "path": []
  }
]],
  "success": false,
}
`;

exports[`helperValidators periodIdValidation decline decimal 1`] = `
{
  "error": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "integer",
    "received": "float",
    "message": "Expected integer, received float",
    "path": []
  }
]],
  "success": false,
}
`;

exports[`helperValidators periodIdValidation decline infinity 1`] = `
{
  "error": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "integer",
    "received": "float",
    "message": "Expected integer, received float",
    "path": []
  },
  {
    "code": "too_big",
    "maximum": 500,
    "type": "number",
    "inclusive": false,
    "exact": false,
    "message": "Number must be less than 500",
    "path": []
  }
]],
  "success": false,
}
`;

exports[`helperValidators projectIdValidation accept project id 1`] = `
{
  "data": "a0E2600000olswLEAQ",
  "success": true,
}
`;

exports[`helperValidators projectIdValidation decline account id 1`] = `
{
  "error": [ZodError: [
  {
    "code": "invalid_string",
    "validation": {
      "startsWith": "a0E"
    },
    "message": "Invalid input: must start with \\"a0E\\"",
    "path": []
  }
]],
  "success": false,
}
`;

exports[`helperValidators projectIdValidation decline empty string 1`] = `
{
  "error": [ZodError: [
  {
    "code": "invalid_string",
    "validation": {
      "startsWith": "a0E"
    },
    "message": "Invalid input: must start with \\"a0E\\"",
    "path": []
  }
]],
  "success": false,
}
`;

exports[`helperValidators projectIdValidation decline project participant id 1`] = `
{
  "error": [ZodError: [
  {
    "code": "invalid_string",
    "validation": {
      "startsWith": "a0E"
    },
    "message": "Invalid input: must start with \\"a0E\\"",
    "path": []
  }
]],
  "success": false,
}
`;
